# erke_mgmt

./: .gitattributes  .gitignore  README.md  README.txt  erke_cdm.cdb  erke_cdm.cdm  erke_dfd.bpb  erke_dfd.bpm  erke_ldm.ldb  erke_ldm.ldm  erke_pdm.pdm  erke_powerdesigner.sws
backend/: Cargo.toml
backend/src/: main.rs
backend/src/route/: activity.rs  activity_audit.rs  audit.rs  do_checkinout.rs  init_checkinout.rs  login.rs  logout.rs  mod.rs  rate.rs  signup.rs  tag.rs
frontend/: .prettierrc  index.html  package.json
frontend/src/: App.tsx  main.tsx  parseActivityState.ts  state.tsx  theme.tsx
frontend/src/api/: invokeFetch.ts  login.ts  logout.ts
frontend/src/api/auditor/: getRatingAgg.ts  putAudit.ts
frontend/src/api/organizer/: getActivity.ts  getActivityAudit.ts  getTag.ts  initiateCheckIn.ts  initiateCheckOut.ts  putActivity.ts
frontend/src/api/student/: checkIn.ts  checkOut.ts  getActivity.ts  getAvailActivity.ts  getRate.ts  getRatingAgg.ts  putRate.ts  putSignUp.ts
frontend/src/component/: AuditorAccordion.tsx  GrayAccordionSummary.tsx  LoginAccordion.tsx  OrganizerAccordion.tsx  StudentAccordion.tsx
notes/: phys.md  trigs_and_procs.md
pd/: erke_cdm.cdb  erke_cdm.cdm  erke_dfd.bpb  erke_dfd.bpm  erke_ldm.ldb  erke_ldm.ldm  erke_pdm.pdm  erke_powerdesigner.sws
script/: gen_priv.py
sql/: phys.sql  proc.sql  role.sql  test_user.sql  trigger.sql  user.sql  view.sql
